--- a/aula1.html
+++ b/aula1.html
@@ -9,13 +9,12 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1>Computação Visual</h1>
+        <h1>Computação Visual - Aula 1:</h1>
         <hr>
         <div>
-            <ul class="mt-3">
-                <li><a href="aula1.html">Aula 1</a></li>
-                <li>Aula 2</li>
-            </ul>
+            <h3>Qual é a sua ideia de Computação Visual?</h3>
+            <p>R: É o uso de Computação grafica e sua variaveis que em conjunto de tecnicas da Computação
+                é possivel realizar a analize e manipulação das imagens com ferramentas desenvolvidas especificamente para esta área</p>
         </div>
     </div>
 </body>
