--- a/aula1.html
+++ b/aula1.html
@@ -8,13 +8,20 @@
     <title>Computação Visual</title>
 </head>
 <body>
-    <div class="container mt-5">
-        <h1>Computação Visual - Aula 1:</h1>
+    <div class="navegacao">
+        <div class="container">
+          <nav class="navbar navbar-expand-sm">
+            <a href="index.html"><h1 class="pt-1">Computação Visual</h1></a>
+          </nav>
+        </div>
+    </div>
+    <div class="container mt-2">
+        <h1>Aula 1:</h1>
         <hr>
         <div>
             <h3>Qual é a sua ideia de Computação Visual?</h3>
             <p>R: É o uso de Computação grafica e sua variaveis que em conjunto de tecnicas da Computação
-                é possivel realizar a analize e manipulação das imagens com ferramentas desenvolvidas especificamente para esta área</p>
+                é possivel realizar a analize e manipulação das imagens com ferramentas desenvolvidas especificamente para esta área.</p>
         </div>
     </div>
 </body>
