--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
     <title>Computação Visual</title>
 </head>
 <body>
-    <div class="container mt-5">
-        <h1>Computação Visual</h1>
-        <hr>
+    <div class="navegacao">
+        <div class="container">
+          <nav class="navbar navbar-expand-sm">
+            <a href="index.html"><h1 class="pt-1">Computação Visual</h1></a>
+          </nav>
+        </div>
+    </div>
+    <div class="container mt-2">
         <div>
+            <h1>Aulas:</h1>
+            <hr>
             <ul class="mt-3">
                 <li><a href="aula1.html">Aula 1</a></li>
-                <li>Aula 2</li>
+                <li><a href="aula2.html">Aula 2</a></li>
             </ul>
         </div>
     </div>
