Adicionando Visão Computacional na aula 2.

--- a/aula2.html
+++ b/aula2.html
@@ -22,27 +22,52 @@
             <h5>Faça uma pesquisa sobre aplicações de Computação Visual e, a partir do que você pesquisou, escolha pelo menos um exemplo de cada subárea (Computação Gráfica, Visão Computacional, Processamento de Imagens) que você gostou ou que chamou a sua atenção.</h5>
             <hr>
             <p>A Computação visual é incorporada de três areas, sendo elas Computação Gráfica, Visão Computacional e Processamento de Imagens.</p>
-            <p><strong>Computação Gráfica: </strong>A Computação Gráfica, estuda a manipulação
-            e análise de imagens, através do computador. Atualmente é uma das áreas de maior expansão e
-            desemvolvimento tecnológico.</p>
-            <p>Um exemplo de computação gráfica pode ser vista no mercado de jogos eletrônicos, onde é possivel encontrar uma enorme 
-            variedade de animações, modelos 3D e ilustrações, assim com uma boa representação gráfica
-            é possivel atrair públicos especificos para um determinado tipo de animação gráfica.   
-            </p>
-            <p style="text-align:center"><iframe width="500" height="280" src="https://www.youtube.com/embed/qC5KtatMcUw" title="Unreal Engine 5 Revealed! | Next-Gen Real-Time Demo Running on PlayStation 5" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </p>
+            <div>
+                <p>
+                    <strong>Computação Gráfica: </strong>A Computação Gráfica, estuda a manipulação
+                    e análise de imagens, através do computador. Atualmente é uma das áreas de maior expansão e
+                    desemvolvimento tecnológico.
+                    <br>
+                    Um exemplo de computação gráfica pode ser vista na animação, que através da
+                    exibição de imagens é possivel reprensentar objetos reais. Outro exemplo
+                    bastante atual é utilizado em técnicas de realidade virtual, onde é possivel
+                    sincronizar movimentos do corpo humano renderizados em tempo real em um
+                    computador.
+                </p>
+            </div>
             <hr>
-            <p><strong>Visão Computacional: </strong></p>
-            <p>Terminar</p>
+            <div>
+                <p><strong>Visão Computacional: </strong></p>
+                <p>A Visão Computacional é responsável de como um computador consegue capturar
+                    imagens reais e a partir disso extrair informações dessas Imagens.
+                    <br>
+                    Um exemplo de visão computacional é a sua grande utilização em industrias
+                    de veículos automatos, como por exemplo o <em>Mars Exploration Rover</em>
+                    da Naza, que apartir das imagens coletadas pelo Rover é possível verificar
+                    os diversos fenomenos que ocorrem em Marte. Outro exemplo é a área de Medicina
+                    que através da detecção de imagens é possível diagnosticar doenças com uma grande
+                    precissão, assim evitando um diagnostico imprecisso ou equivocado.
+                </p>
+            </div>
             <hr>
-            <p><strong>Processamento de Imagens: </strong></p>
-            <p>Terminar</p>
+                <div>
+                    <p><strong>Processamento de Imagens: </strong></p>
+                    <p>Terminar</p>
+                </div>
             <hr>
             <small>
                 <p>Referencias:</p>
                 <p>
                     <a href="https://www.inf.pucrs.br/manssour/Publicacoes/TutorialSib2006.pdf">
                         Introdução à Computação Gráfica - Isabel Harb Manssour Marcelo Cohen 
+                    </a>
+                    <br>
+                    <a href="https://d1wqtxts1xzle7.cloudfront.net/35825905/2010_IA_FT_UNICAMP_visaoComputacional-with-cover-page-v2.pdf?Expires=1661881565&Signature=LCno~NdWW1ri1fj2F22Tc5KruN-iKvic4YhqsXlmHpQBD3-LXPlfEKrvo8P3jyKNVvQKaV8tqXFutYRPkYpOjcIhKuEEBx9pLG7em16WNf~LbG2BQhijz1o-KYHwfOy~phZ5WSJhf4ERx8n6XEApi76p2VLOE5hMEKcT-eVA7CTqGTV6fmMK1P03E5R9pr-JNTabXSvhnIFCwiq20WyR7ulshRtSG00btgx-m9eENs24Y1pi444sT1HXa2U2HJZwkVlCizCQIRiJIBdaseQDN8yfzIj-9Fbdgp1z0zDmXCR1sYih6GExJmZD3ZVd2RwZbEuIJue56JpT9xxm83ZTCg__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA">
+                        VISÃO COMPUTACIONAL - Fernanda Bock
+                    </a>
+                    <br>
+                    <a href="http://projetoaprendizagemgrupo4.pbworks.com/w/file/fetch/96395952/Processamento%20Digital%20de%20Imagens.pdf">
+                        Processamento Digital de Imagens - Ogê Marques Filho - Hugo Vieira Neto
                     </a>
                 </p>
             </small>
