--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <ul class="mt-3">
                 <li><a href="aula1.html">Aula 1</a></li>
                 <li><a href="aula2.html">Aula 2</a></li>
+                <li><a href="#">Aula 3</a></li>
+                <li><a href="aula4.html">Aula 4</a></li>
             </ul>
         </div>
     </div>
