--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="aula2.html">Aula 2</a></li>
                 <li><a href="#">Aula 3</a></li>
                 <li><a href="aula4.html">Aula 4</a></li>
+                <li><a href="aula5.html">Aula 5</a></li>
             </ul>
         </div>
     </div>
