--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="#">Aula 3</a></li>
                 <li><a href="aula4.html">Aula 4</a></li>
                 <li><a href="aula5.html">Aula 5</a></li>
+                <li><a href="aula6.html">Aula 6</a></li>
             </ul>
         </div>
     </div>
