--- a/aula7.html
+++ b/aula7.html
@@ -15,20 +15,15 @@
           </nav>
         </div>
     </div>
-    <div class="container mt-2">
-        <div>
-            <h1>Aulas:</h1>
-            <hr>
-            <ul class="mt-3">
-                <li><a href="aula1.html">Aula 1</a></li>
-                <li><a href="aula2.html">Aula 2</a></li>
-                <li><a href="#">Aula 3</a></li>
-                <li><a href="aula4.html">Aula 4</a></li>
-                <li><a href="aula5.html">Aula 5</a></li>
-                <li><a href="aula6.html">Aula 6</a></li>
-                <li><a href="aula7.html">Aula 7</a></li>
-            </ul>
-        </div>
+    <div class="container mt-2 mb-3">
+        <h1>Aula 7:</h1>
+        <hr>
+        
+        <hr>
+        <small>Referencias:
+            <br>
+            
+        </small> 
     </div>
 </body>
 </html>
