--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="aula5.html">Aula 5</a></li>
                 <li><a href="aula6.html">Aula 6</a></li>
                 <li><a href="aula7.html">Aula 7</a></li>
+                <li><a href="aula8.html">Aula 8</a></li>
             </ul>
         </div>
     </div>
